# solas-billing

./: .env.example  .gitignore  .npmrc  README.md  biome.json  bunfig.toml  docker-compose.yml  knip.json  package-lock.json  package.json  turbo.json
.agents/skills/billing/: skill.md
.agents/skills/checkout/: skill.md
.claude/: CLAUDE.md
.context/migration-interface/: DECISIONS.md  PROPOSAL.md  STATUS.md
.cursor/rules/: solas.mdc
.github/workflows/: ci.yml
.plans/: roadmap.md
.zed/: settings.json
ai/: prompts.json
apps/checkout/: checkout.js
apps/dashboard/: Dockerfile  README.md  package-lock.json  package.json
apps/dashboard/src/: App.jsx  Logo.jsx  index.css
apps/docs/: architecture.md
apps/leaf/: Cargo.toml  Dockerfile  leaf-engine.js
apps/leaf/src/: credit_lock.rs  db.rs  gateway.rs  jobs.rs  main.rs  types.rs
apps/scope-picker/: picker.js
apps/sdk-test/: integration.test.js
apps/server/: Dockerfile  db.js  package-lock.json  package.json  server.js  token-counter.js
apps/testbench/: benchmark.js
apps/website/: index.html
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
scripts/: dev.js
shared/: constants.js
vite/: vite-plugin-solas.js
