[package]
name = "solas-leaf"
version = "1.0.0"
edition = "2021"
description = "Rust compiled high-performance LLM Billing Proxy & Credit Gating Interceptor"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
axum = { version = "0.7.4", features = ["macros"] }
reqwest = { version = "0.11.23", features = ["json", "stream"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
rusqlite = { version = "0.30.0", features = ["bundled"] }
futures-util = "0.3.30"
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.6.1", features = ["v4"] }
sha2 = "0.10.8"
